<resources>
    <string name="app_name">CustomNavigationDrawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_favourite">Favourite</string>
    <string name="nav_history">History</string>
    <string name="nav_account">Account</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_password">Change Password</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_sign_out">Sign Out</string>
</resources>